--- a/voxhire/src/styles/home.css
+++ b/voxhire/src/styles/home.css
@@ -206,7 +206,7 @@ nav ul li a:hover {
   cursor: pointer;
   transition: background-color 0.3s ease;
   display: flex;
-
+  width: 9em;
   align-items: center;
   gap: 10px;
   font-weight: 600;
